# Soundy

./: .gitignore  CMakeLists.txt  README.md
lib/alsa/include/: callback.hpp  device.hpp  states.hpp  utils.hpp
lib/alsa/src/: device.cpp
lib/soundy/: CMakeLists.txt
lib/soundy/include/: callback.hpp  device.hpp  states.hpp  utils.hpp
lib/soundy/src/: alsa.cpp  device.cpp
src/: main.cpp
test/: box.cpp  sinewave.cpp
